--- a/package.json
+++ b/package.json
@@ -31,8 +31,23 @@
     "react-test-renderer": "^16.13.1"
   },
   "dependencies": {
+    "babel-polyfill": "6.26.0",
+    "babel-preset-env": "1.7.0",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-stage-2": "6.24.1",
+    "babel-preset-stage-3": "6.24.1",
+    "babel-register": "6.26.0",
+    "bootstrap": "4.3.1",
+    "chai": "4.2.0",
+    "chai-as-promised": "7.1.1",
+    "chai-bignumber": "3.0.0",
+    "identicon.js": "^2.3.3",
     "near-api-js": "^0.26.0",
     "react": "^16.13.1",
+    "react-bootstrap": "1.0.0-beta.5",
+    "react-gravatar": "^2.6.3",
+    "react-scripts": "2.1.3",
+    "react-toastify": "^6.0.8",
     "react-dom": "^16.13.1",
     "regenerator-runtime": "^0.13.5"
   },
