--- a/package.json
+++ b/package.json
@@ -42,13 +42,14 @@
     "chai-as-promised": "7.1.1",
     "chai-bignumber": "3.0.0",
     "identicon.js": "^2.3.3",
+    "js-sha256": "^0.9.0",
     "near-api-js": "^0.26.0",
     "react": "^16.13.1",
     "react-bootstrap": "1.0.0-beta.5",
+    "react-dom": "^16.13.1",
     "react-gravatar": "^2.6.3",
     "react-scripts": "2.1.3",
     "react-toastify": "^6.0.8",
-    "react-dom": "^16.13.1",
     "regenerator-runtime": "^0.13.5"
   },
   "eslintConfig": {
