--- a/.gitignore
+++ b/.gitignore
@@ -5,24 +5,24 @@ package-lock.json
 /node_modules
 /.pnp
 .pnp.js
-/out
+#/out
 
 #keys
 #/neardev
 
 
 # testing
-/coverage
+#/coverage
 
 # production
-/build
+#/build
 
 # misc
-.DS_Store
+#.DS_Store
 .env.local
 .env.development.local
 .env.test.local
-.env.production.local
+#.env.production.local
 
 npm-debug.log*
 yarn-debug.log*
