--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "deploy:contract": "near deploy",
     "deploy:pages": "gh-pages -d dist/",
     "deploy": "npm run build && npm run deploy:contract && npm run deploy:pages",
-    "prestart": "npm run build:contract && npm run dev:deploy:contract",
+    "prestart": "nodemon --watch assembly -e ts --exec \"npm run start\"",
     "start": "env-cmd -f ./neardev/dev-account.env parcel src/index.html",
     "dev": "nodemon --watch assembly -e ts --exec \"npm run start\"",
     "test": "asp --nologo && npm run build:contract && jest test --runInBand"
@@ -39,6 +39,7 @@
     "babel-register": "6.26.0",
     "bootstrap": "4.3.1",
     "chai": "4.2.0",
+    "near-sdk-as": "^0.4.2",
     "chai-as-promised": "7.1.1",
     "chai-bignumber": "3.0.0",
     "identicon.js": "^2.3.3",
